--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.8.3",
     "preline": "^1.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
