--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.17.1",
     "preline": "^1.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.2",
+    "react-spring": "^9.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
