--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "bootstrap-icons": "^1.10.3",
@@ -19,12 +20,14 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.2.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
